--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,18 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1 class="title"> Make an API call to get flights from kiwis</h1>
+
+
+
+  <form class="search">
+    <input type="text" class="search__field" id="departLoc__search" placeholder="Find you dreamed destination" list="airports__depart">
+    <input type="text" class="search__field" id="returnLoc__search" placeholder="Returning destination" list="airports__return">
+    <input type="text" class="search__field" id="departDate__search" placeholder="departure date format (dd/mm/yyyy)">
+    <input type="text" class="search__field" id="returnDate__search" placeholder="returning date format (dd/mm/yyyy)">
+    <button class="btn search__btn">
+        <span>Search</span>
+    </button>
+  </form>
+
+  <datalist id="airports__depart"></datalist>
+  <datalist id="airports__return"></datalist>
+
+  <ul class="flights__list"></ul>
