j'ai mis le bg et stylé la recherche bar

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -23,11 +23,12 @@ li a {
   color: white;
   font-family: 'Alegreya Sans SC', sans-serif;
   font-weight: 300;
+  font-size: 14px;
   text-decoration: none;
 }
 
-li i {
-  color: rgb(27, 105, 166)
+.liste-navbar i {
+  color: rgb(27, 105, 166);
 }
 
 .liste-navbar {
