--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,17 +1,43 @@
-<h1 class="title" id="home_page"> Make an API call to get flights from kiwis</h1>
+<div id="section1">
 
+  <div class="slogan">
+    <h1>Le premier comparateur <br> pour une empreinte <br>écologique neutre</h1>
+  </div>
 
-  <form class="search">
-    <input type="text" class="search__field" id="departLoc__search" placeholder="Find you dreamed destination" list="airports__depart">
-    <input type="text" class="search__field" id="returnLoc__search" placeholder="Returning destination" list="airports__return">
-    <input type="text" class="search__field" id="departDate__search" placeholder="departure date format (dd/mm/yyyy)">
-    <input type="text" class="search__field" id="returnDate__search" placeholder="returning date format (dd/mm/yyyy)">
-    <button class="btn search__btn">
-        <span>Search</span>
-    </button>
-  </form>
+  <div class="choix3">
+    <ul>
 
-  
+      <li class="allez-retour">
+        <li><p>Allez-retour</p></li>
+        <li><i class="fas fa-arrow-down"></i></li>
+      </li>
+
+      <li class="passager">
+        <li><p>1 Passager</p></li>
+        <li><i class="fas fa-arrow-down"></i></li>
+      </li>
+
+      <li class="classe">
+        <li><p>Economy</p></li>
+        <li><i class="fas fa-arrow-down"></i></li>
+      </li>
+
+    </ul>
+  </div>
+
+  <div class="border-form">
+    <form class="search">
+      <input type="text" class="search__field" id="departLoc__search" placeholder="Destination" list="airports__depart">
+      <input type="text" class="search__field" id="returnLoc__search" placeholder="Retour" list="airports__return">
+      <input type="text" class="search__field" id="departDate__search" placeholder="Date allez">
+      <input type="text" class="search__field" id="returnDate__search" placeholder="Date retour">
+      <button class="btn search__btn">
+          <span>Rechercher</span>
+      </button>
+    </form>
+  </div>
+
+</div>
 
 
   <datalist id="airports__depart"></datalist>
