--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -1,12 +1,4 @@
-<div id="section1">
-
-  <div class="slogan">
-    <h1>Le premier comparateur <br> pour une empreinte <br>écologique neutre</h1>
-  </div>
-
-  <%= render 'shared/searchbar' %>
-
-  <!-- <div class="choix3">
+<div class="choix3">
     <ul>
 
       <li class="allez-retour">
@@ -39,27 +31,4 @@
           <span>Rechercher</span>
       </button>
     </form>
-  </div> -->
-
-</div>
-
-
-  <datalist id="airports__depart"></datalist>
-  <datalist id="airports__return"></datalist>
-
-  <ul class="flights__list"></ul>
-
-  <!-- <div class="container">
-    <div class="row">
-        <div class='col-sm-6'>
-            <div class="form-group">
-                <div class='input-group date' id='datetimepicker1'>
-                    <input type='text' class="form-control" />
-                    <span class="input-group-addon">
-                        <span class="glyphicon glyphicon-calendar"></span>
-                    </span>
-                </div>
-            </div>
-        </div> -->
-    <!-- </div>
-  </div> -->
+  </div>
