--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -12,3 +12,56 @@
 .search__field {
   width: 200px;
 }
+
+.choix3 {
+  padding-left: 14vw;
+  color: white;
+}
+
+.choix3 ul{
+  padding: 0px;
+  padding-top: 20px;
+  font-size: 15px;
+}
+
+.choix3 li{
+  padding-right: 3px;
+}
+
+.border-form {
+  background-color: $green;
+  margin-left: 13vw;
+  margin-right: 20vw;
+  border-radius: 5px;
+  position: relative;
+}
+
+.fa-plane-departure {
+  position: absolute;
+  top: 24px;
+  left: 23px;
+}
+
+.fa-plane-arrival {
+  position: absolute;
+  top: 24px;
+  left: 224px;
+}
+
+.search {
+  padding: 13px;
+}
+
+.search input {
+  margin-right: 10px;
+  border: none;
+  border-radius: 2px;
+}
+
+.border-form button {
+  background-color: $blue;
+}
+
+.border-form button span {
+  color: white;
+}
