--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -15,7 +15,7 @@
   padding-top: 50px;
 }
 
-.choix3 {
+/* .choix3 {
   padding-left: 14vw;
   color: white;
 }
@@ -35,6 +35,19 @@
   margin-left: 13vw;
   margin-right: 20vw;
   border-radius: 5px;
+  position: relative;
+}
+
+.fa-plane-departure {
+  position: absolute;
+  top: 24px;
+  left: 23px;
+}
+
+.fa-plane-arrival {
+  position: absolute;
+  top: 24px;
+  left: 224px;
 }
 
 .search {
@@ -46,3 +59,28 @@
   border: none;
   border-radius: 2px;
 }
+
+.border-form button {
+  background-color: $blue;
+}
+
+.border-form button span {
+  color: white;
+} */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
