--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -22,11 +22,13 @@
   <div class="border-form">
     <i class="fas fa-plane-departure"></i>
     <i class="fas fa-plane-arrival"></i>
+    <div class="square1"></div>
+    <div class="square2"></div>
     <form class="search">
-      <input  type="text" class="search__field" id="departLoc__search" placeholder="             Paris (PAR)" list="airports__depart">
-      <input type="text" class="search__field" id="returnLoc__search" placeholder="             À ? " list="airports__return">
-      <input type="text" class="search__field" id="departDate__search" placeholder="Date allez">
-      <input type="text" class="search__field" id="returnDate__search" placeholder="Date retour">
+      <input  type="text" class="search__field1" id="departLoc__search" placeholder="        Paris (PAR)" list="airports__depart">
+      <input type="text" class="search__field2" id="returnLoc__search" placeholder="        À ? " list="airports__return">
+      <input type="text" class="search__field3" id="departDate__search" placeholder="Date allez">
+      <input type="text" class="search__field3" id="returnDate__search" placeholder="Date retour">
       <button class="btn search__btn">
           <span>Rechercher</span>
       </button>
