Added the passenger and flight_type parameter to the search

--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -65,3 +65,11 @@
 .border-form button span {
   color: white;
 }
+
+#flight_type {
+  background-color: $blue;
+}
+
+#passengers {
+  background-color: $blue;
+}
