--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -1,34 +1,37 @@
 <div class="choix3">
-    <ul>
-
-      <li class="allez-retour">
-        <li><p>Allez-retour</p></li>
-        <li><i class="fas fa-arrow-down"></i></li>
-      </li>
-
-      <li class="passager">
-        <li><p>1 Passager</p></li>
-        <li><i class="fas fa-arrow-down"></i></li>
-      </li>
-
-      <li class="classe">
-        <li><p>Economy</p></li>
-        <li><i class="fas fa-arrow-down"></i></li>
-      </li>
-
-    </ul>
+    
   </div>
 
   <div class="border-form">
     <i class="fas fa-plane-departure"></i>
     <i class="fas fa-plane-arrival"></i>
-    <form class="search">
-      <input  type="text" class="search__field" id="departLoc__search" placeholder="             Paris (PAR)" list="airports__depart">
-      <input type="text" class="search__field" id="returnLoc__search" placeholder="             À ? " list="airports__return">
-      <input type="text" class="search__field" id="departDate__search" placeholder="Date allez">
-      <input type="text" class="search__field" id="returnDate__search" placeholder="Date retour">
+    <form class="search" method="get" action="http://localhost:3000/search">
+      <ul>
+        <li class="allez-retour">
+          <select name="flight_type" id="flight_type">
+            <option value="oneway">Aller simple</option>
+            <option value="round">Aller retour</option>
+          </select>
+          <li><i class="fas fa-arrow-down"></i></li>
+        </li>
+
+        <li class="passager">
+          <input type="number" min="1" max="9" name="passengers" id="passengers">
+          <li><i class="fas fa-arrow-down"></i></li>
+        </li>
+      </ul>
+      <input  type="text" name="depart" class="search__field" id="departLoc__search" placeholder="Paris (PAR)" list="airports__depart">
+      <input type="text" name="return" class="search__field" id="returnLoc__search" placeholder="À ? " list="airports__return">
+      <input type="text" name="from" class="search__field" id="departDate__search" placeholder="Date allez">
+      <input type="text" name="to" class="search__field" id="returnDate__search" placeholder="Date retour">
       <button class="btn search__btn">
           <span>Rechercher</span>
       </button>
     </form>
   </div>
+
+<!-- <li class="classe">
+        <li><p>Economy</p></li>
+        <li><i class="fas fa-arrow-down"></i></li>
+      </li> -->
+
