--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -9,30 +9,18 @@
   margin-bottom: 75px;
 }
 
-
-.choix3 {
-  padding-left: 14vw;
-  color: white;
-}
-
-.choix3 ul{
+.search ul {
   padding: 0px;
-  padding-top: 20px;
-  font-size: 15px;
-}
-
-.choix3 li{
-  padding-right: 3px;
 }
 
 .search__field1 {
   width: 170px;
-  margin-left: 30px;
+  margin-left: 35px;
 }
 
 .search__field2 {
   width: 170px;
-  margin-left: 30px;
+  margin-left: 35px;
 }
 
 .search__field3 {
@@ -42,16 +30,59 @@
 .border-form {
   background-color: $green;
   margin-left: 13vw;
-  width: 960px;
+  width: 990px;
   border-radius: 5px;
   position: relative;
 }
 
+.allez-retour {
+  position: absolute;
+  top: -30px;
+  left: 5px;
+  color: white;
+}
+
+.search select {
+  background-color: transparent;
+  border: none;
+}
+
+.passager input {
+  position: absolute;
+  top: -31px;
+  left: 210px;
+  background-color: transparent;
+  color: white;
+}
+
+.passager p {
+  position: absolute;
+  top: -30px;
+  left: 135px;
+  color: white;
+}
+
+input:focus {
+  outline: none;
+}
+
+select:focus {
+  outline: none;
+}
+
+.search .passager input::placeholder {
+  color: white;
+  font-size: 21px;
+}
+
+
+
+
 .square1 {
   position: absolute;
   top: 13px;
-  left: 15px;
-  width: 30px;
+  left: 14.5px;
+  width: 36px;
   height: 39px;
   background-color: white;
   border-radius: 2px;
@@ -60,8 +91,8 @@
 .square2 {
   position: absolute;
   top: 13px;
-  left: 224px;
-  width: 30px;
+  left: 230px;
+  width: 36px;
   height: 39px;
   background-color: white;
   border-radius: 2px;
@@ -77,7 +108,7 @@
 .fa-plane-arrival {
   position: absolute;
   top: 24px;
-  left: 229px;
+  left: 235px;
   z-index: 3;
 }
 
@@ -99,10 +130,10 @@
   color: white;
 }
 
-#flight_type {
+/* #flight_type {
   background-color: $blue;
 }
 
 #passengers {
   background-color: $blue;
-}
+} */
