--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,11 +8,12 @@
 .slogan h1 {
   font-family: 'Alegreya Sans SC', sans-serif;
   font-weight: 300;
-  font-size: 45px;
+  font-size: 48px;
   margin: 0px;
   color: white;
   padding-left: 13vw;
   padding-top: 50px;
+  padding-bottom: 40px;
 }
 
 
