--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -1,33 +1,38 @@
 <div class="choix3">
-    
-  </div>
+
+</div>
 
   <div class="border-form">
     <i class="fas fa-plane-departure"></i>
     <i class="fas fa-plane-arrival"></i>
+    <div class="square1"></div>
+    <div class="square2"></div>
+    <!-- YOU ENTER THE FORM -->
     <form class="search" method="get" action="http://localhost:3000/search">
       <ul>
+
         <li class="allez-retour">
           <select name="flight_type" id="flight_type">
             <option value="oneway">Aller simple</option>
             <option value="round">Aller retour</option>
           </select>
-          <li><i class="fas fa-arrow-down"></i></li>
         </li>
 
         <li class="passager">
-          <input type="number" min="1" max="9" name="passengers" id="passengers">
-          <li><i class="fas fa-arrow-down"></i></li>
+          <p>Passager</p>
+          <input placeholder="1" type="number" min="1" max="9" name="passengers" id="passengers">
         </li>
+
       </ul>
-      <input  type="text" name="depart" class="search__field" id="departLoc__search" placeholder="Paris (PAR)" list="airports__depart">
-      <input type="text" name="return" class="search__field" id="returnLoc__search" placeholder="À ? " list="airports__return">
-      <input type="text" name="from" class="search__field" id="departDate__search" placeholder="Date allez">
-      <input type="text" name="to" class="search__field" id="returnDate__search" placeholder="Date retour">
+      <input  type="text" name="depart" class="search__field search__field1 " id="departLoc__search" placeholder="    Paris (PAR)" list="airports__depart">
+      <input type="text" name="return" class="search__field search__field2" id="returnLoc__search" placeholder="    À ? " list="airports__return">
+      <input type="text" name="from" class="search__field search__field3" id="departDate__search" placeholder="Date allez">
+      <input type="text" name="to" class="search__field search__field3" id="returnDate__search" placeholder="Date retour">
       <button class="btn search__btn">
           <span>Rechercher</span>
       </button>
     </form>
+    <!-- YOU LEAVE THE FORM -->
   </div>
 
 <!-- <li class="classe">
