--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -113,6 +113,10 @@
   width: 37%;
 }
 
+.explication1 h5, .explication2 h5{
+  line-height: 23px;
+}
+
 .explication1 img, .explication2 img {
   width: 50px;
 }
