--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
     </div>
 
     <div class="foret-fin-section1">
-      <img src="https://res.cloudinary.com/tark-industries/image/upload/v1548506723/forest-fin-section1.png">
+      <img src="https://res.cloudinary.com/tark-industries/image/upload/v1548672018/forest_back.png">
     </div>
   </div>
 
@@ -33,49 +33,219 @@
     </div>
 
     <div class="ticket-dette">
-      <ul>
-        <li><img src="https://res.cloudinary.com/tark-industries/image/upload/v1548511349/ticket.png"></li>
-
-        <li>
-          <h4>Notre solution: la dette écologique</h4>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm">
+            <img src="https://res.cloudinary.com/tark-industries/image/upload/v1548511349/ticket.png">
+          </div>
+          <div class="col-sm">
+            <h4>Notre solution: la dette écologique</h4>
           <h5>Pour chaque trajet, Treep calcule le nombre de km, le modèle de l’avion et sa consommation puis en déduit le rejet de Co2 par passager.</h5>
           <h5 class="def-dette">La dette écologique c’est le prix du nombre d’arbres nécessaire pour compenser les rejets de Co2 d’un voyage.</h5>
-        </li>
-      </ul>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="explications1et2">
-      <ul>
+      <div class="container">
+        <div class="row">
+          <div class="explication1">
+            <div class="col-sm">
+              <img class="number1" src="https://res.cloudinary.com/tark-industries/image/upload/v1548514473/treep_expl1.png">
+              <h4>Treep paye une partie de votre dette écologique.</h4>
+              <h5>Lorsque vous passez par Treep, vous avez déja fait un pas. <br> En effet une partie de votre dette est financée par les comissions que Treep perçoit lorsque vous réservez votre billet.
+              Environ 6% de votre dette est automatiquement prise en charge par Treep.</h5>
+              <div class="row">
+                <div class="col-sm">
+                  <a class="section2-button" href="#">Transparence financière</a>
+                  <div class="text-button">
+                    <div class="square-but"></div>
+                    <h6>Nous plantons des arbres avec 80% de nos bénefices !</h6>
+                    <p>Lorsque vous selectionnez un billet, vous êtes redirigé chez l’un de nos partenaires. Pour ce service, Treep gagne environ 2,2% du prix de votre billet. Avec 80% des bénefices que chaque utilisateur nous rapporte, nous commençons le paiement de sa dette écologique. Donc en passant par Treep vous avez déjà commencé a rembourser la planète ! <br>
+                    Les 20% restant nous permettent de stocker de l'argent pour de futur projets, améliorations du site.</p>
+                  </div>
+                </div>
+                <div style="margin-left: -20%" class="col-sm">
+                  <a class="section2-button" href="#">Les revenues de Treep</a>
+                  <div style="width: 140%" class="text-button">
+                    <div class="square-but"></div>
+                    <h6>Treep gagne de l'argent grâce a vous !</h6>
+                    <p>En effet à chaque fois que nous vous redirigeons vers une compagnie aérienne ou une agence de voyage, celle-ci nous rémunère en retour. C'est entre 1 et 3% du prix de votre billet. Mais vous le savez déjà, nos bénéfices permettent de financer une partie de votre dette écologique.
+                    D'autre part nous gagnons aussi de l'argent grâce aux publicitées. <br>
+                    Cliquez sur le boutton pour pouvoir acceder à nos rapports financiers.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="explication2">
+            <div class="col-sm">
+              <img class="number2" src="https://res.cloudinary.com/tark-industries/image/upload/v1548514472/treep_expl2.png">
+              <h4>Vous avez le choix.<br>Votre dette est entre vos mains seules.</h4>
+              <h5>Dès lors que Treep à rempli sa mission, le reste est entre vos mains, vous pouvez remboursez partiellement ou entièrement votre dette écologique!</h5>
+              <div class="row">
+                <div class="col-sm">
+                  <a style="margin-right: -25%" class="section2-button" href="#">Comment est calculée la dette</a>
+                  <div class="text-button text-button2">
+                    <div class="square-but sq2"></div>
+                    <h6>Des meilleurs calculs a venir!</h6>
+                    <p>Ce site n'est encore qu'un MVP (prototype), la dette n'est pas encore calculée en prenant en compte le modèle de l'avion. D'autre part ce ne sont pas nos calculs, nous les avons pris sur le site suivant : www.bad-request </p>
+                  </div>
+                </div>
+                <div class="col-sm">
+                  <a class="section2-button" href="#">Comment payer la dette</a>
+                  <div style="width: 130%" class="text-button text-button2">
+                    <div class="square-but sq2"></div>
+                    <h6>Dans votre Dashboard. <br>
+                    Ou consultez l'onglet qui s'affiche lors de votre achat.</h6>
+                    <p>Vous pouvez consulter tout vos voyages sur votre compte. D'autre part dès que vous selectionnez un billet, un onglet va s'ouvrir. Et voilà <br>
+                    Ps: Ne vous culpabilisez pas si elle est trop chère !</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-        <li class="explication1">
-          <img class="number1" src="https://res.cloudinary.com/tark-industries/image/upload/v1548514473/treep_expl1.png">
-          <h4>Treep paye une partie de votre dette écologique.</h4>
-          <h5>Lorsque vous passez par Treep, vous avez déja fait un pas. En effet une partie de votre dette est financée par les comissions que Treep perçoit lorsque vous réservez votre billet.
-          Environ 6% de votre dette est automatiquement prise en charge par Treep.</h5>
-          <ul>
-            <li><a class="section2-button" href="#">Transparence financière</a></li>
-            <li><a class="section2-button" href="#">Les revenues de Treep</a></li>
-          </ul>
-        </li>
+  <div id="section3">
 
-        <li class="explication2">
-          <img class="number2" src="https://res.cloudinary.com/tark-industries/image/upload/v1548514472/treep_expl2.png">
-          <h4>Vous avez le choix.<br>Votre dette est entre vos mains seules.</h4>
-          <h5>Dès lors que Treep à rempli sa mission, le reste est entre vos mains, vous pouvez remboursez partiellement ou entièrement votre dette écologique!</h5>
-          <ul>
-            <li><a class="section2-button" href="#">Comment payer la dette?</a></li>
-            <li><a class="section2-button" href="#">Comment est calculée la dette?</a></li>
-          </ul>
-        </li>
+    <div class="network">
+      <a href="#"><img src="https://res.cloudinary.com/tark-industries/image/upload/v1548766802/facebook-treep.png"></a> <br>
+      <a href="#"><img src="https://res.cloudinary.com/tark-industries/image/upload/v1548766811/insta-treep.png"></a> <br>
+      <a href="#"><img src="https://res.cloudinary.com/tark-industries/image/upload/v1548766819/tweeter-treep.png"></a> <br>
+    </div>
 
-      </ul>
+    <div class="container container-footer1">
+      <div class="row">
+        <div class="col-sm">
+          <a href="#">Qui sommes nous ?</a>
+        </div>
+        <div class="col-sm">
+          <a href="#">Nos arbres</a>
+        </div>
+        <div class="col-sm">
+          <a href="#">La dette écologique</a>
+        </div>
+        <div class="col-sm">
+          <a href="#">Presse</a>
+        </div>
+      </div>
+      <div style="padding-top: 20px" class="row">
+        <div class="col-sm">
+          <a href="#">Comment fonctionne Treep ?</a>
+        </div>
+        <div class="col-sm">
+          <a href="#">Politique de confidentialité de cookies</a>
+        </div>
+        <div class="col-sm">
+          <a href="#">Condition d'utilisation</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container container-footer2">
+      <div class="row">
+        <div class="col-sm">
+          <h5>Sites Internationaux</h5>
+        </div>
+      </div>
+      <div style="padding-bottom: 6px" class="row">
+        <div class="col-sm">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9a/Flag_of_Spain.svg/1280px-Flag_of_Spain.svg.png">
+          <a href="#">Espana - Vuelos</a>
+        </div>
+        <div class="col-sm">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/fa/Flag_of_the_People%27s_Republic_of_China.svg/255px-Flag_of_the_People%27s_Republic_of_China.svg.png">
+          <a href="#">中国 - 机票</a>
+        </div>
+        <div class="col-sm">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d9/Flag_of_Norway.svg/2000px-Flag_of_Norway.svg.png">
+          <a href="#">Billige Flybilletter</a>
+        </div>
+        <div class="col-sm">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/ae/Flag_of_the_United_Kingdom.svg/1280px-Flag_of_the_United_Kingdom.svg.png">
+          <a href="#">UK - Flights</a>
+        </div>
+      </div>
+
+      <div style="padding-bottom: 6px" class="row">
+        <div class="col-sm">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/45/Flag_of_Ireland.svg/1200px-Flag_of_Ireland.svg.png">
+          <a href="#">Ireland - Flights</a>
+        </div>
+        <div class="col-sm">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4c/Flag_of_Sweden.svg/1200px-Flag_of_Sweden.svg.png">
+          <a href="#">Sverige - Flyg</a>
+        </div>
+        <div class="col-sm">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/a/a4/Flag_of_the_United_States.svg/1280px-Flag_of_the_United_States.svg.png">
+          <a href="#">USA - Flights</a>
+        </div>
+        <div class="col-sm">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/c/cb/Flag_of_the_United_Arab_Emirates.svg">
+          <a href="#">United Arab Emirates - Flights</a>
+        </div>
+      </div>
+
+      <div style="padding-bottom: 6px" class="row">
+        <div class="col-sm">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/c/c3/Flag_of_France.svg/1200px-Flag_of_France.svg.png">
+          <a href="#">France - Vols</a>
+        </div>
+        <div class="col-sm">
+          <img src="https://upload.wikimedia.org/wikipedia/en/0/03/Flag_of_Italy.svg">
+          <a href="#">Italia - Voli</a>
+        </div>
+        <div class="col-sm">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/9/9e/Flag_of_Japan.svg/1280px-Flag_of_Japan.svg.png">
+          <a href="#">日本 - 航空券</a>
+        </div>
+        <div class="col-sm">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/12/Flag_of_Poland.svg/1280px-Flag_of_Poland.svg.png">
+          <a href="#">Polska - Tanie loty</a>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-sm">
+          <img src="https://upload.wikimedia.org/wikipedia/en/thumb/b/ba/Flag_of_Germany.svg/1280px-Flag_of_Germany.svg.png">
+          <a href="#">Deutschland - Flüge</a>
+        </div>
+        <div class="col-sm">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/88/Flag_of_Australia_%28converted%29.svg/1200px-Flag_of_Australia_%28converted%29.svg.png">
+          <a href="#">Australia - Cheap flights</a>
+        </div>
+        <div class="col-sm"></div>
+        <div class="col-sm"></div>
+      </div>
+
+
+    </div>
+
+    <div class="container container-footer3">
+      <div class="row">
+        <div class="col-sm">
+          <p>Confidentialité</p>
+        </div>
+        <div class="col-sm">
+          <p>Conditions générales</p>
+        </div>
+        <div class="col-sm">
+          <p>©Treep 2019</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="text-footer">
+    <p>Trouvez votre voyage sur Treep.com, Comparez parmis des centaines de fournisseurs pour avoir les meilleurs prix et ce chaque jour. Trouvez des billets de vols pas cher et écologique. Touts les billets internationaux sont disponibles, recherchez parmis les companies aériennes les plus prisé et les plus populaire. Treep c’est la garantie de trouver un billet d’avion pas cher. N’attendez plus pour décuovrir toute nos destinantions. </p>
     </div>
 
   </div>
-
 </div>
-
-
 
 
   <datalist id="airports__depart"></datalist>
