--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -13,8 +13,8 @@ ul li, ul li li {
 }
 
 ul .li-before {
-  padding-right: 1.8vw;
-  padding-left: 1.8vw;
+  padding-right: 1.4vw;
+  padding-left: 1.4vw;
   padding-top: 35px;
 }
 
@@ -44,6 +44,20 @@ li a {
 
 .fr-flag {
   width: 20px;
+}
+
+
+  /*  * * * * * * * * * * *
+      *  MEDIA   QUERIES  *
+      * * * * * * * * * * *   */
+
+
+
+@media only screen and (max-width: 1132px) {
+  ul .li-before {
+  padding-right: 0.7vw;
+  padding-left: 0.7vw;
+  }
 }
 
 
