--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,13 +1,6 @@
-
-
-
-
-
-
-
-
-
-
+body, html {
+  overflow-x: hidden;
+}
 
 
 /*    * * * * * * * * * * *
@@ -16,12 +9,10 @@
 
 
 
-
-
-
 #section1 {
   background-image: url('https://res.cloudinary.com/tark-industries/image/upload/v1548345076/ballon.png');
   background-size: auto 700px;
+  background-position: top center;
   background-repeat: no-repeat;
 }
 
@@ -69,7 +60,7 @@
 
 #section2 {
   background-image: url('https://res.cloudinary.com/tark-industries/image/upload/v1548672355/bluesquare.png');
-  background-position: center;
+  background-position: top center;
   background-repeat: no-repeat;
   min-height: 145vh;
 }
@@ -89,7 +80,7 @@
 
 .ticket-dette img {
   width: 345px;
-  margin-left: 15%
+  float: right;
 }
 
 .def-dette {
@@ -160,8 +151,12 @@
   margin-top: -9px;
 }
 
+.sq1 {
+  margin-left: 100px !important;
+}
+
 .sq2 {
-  margin-left: 180px !important;
+  margin-left: 200px !important;
 }
 
 /* BUTTON PART */
@@ -215,6 +210,7 @@
 
 .container-footer2 {
   padding-bottom: 30px;
+  padding-right: 20px;
 }
 
 #section3 .container-footer3 {
@@ -228,11 +224,17 @@
   margin-bottom: 0px;
 }
 
+  /*  * * * * * * * * * * *
+      *  MEDIA   QUERIES  *
+      * * * * * * * * * * *   */
 
 
 
-
-
+@media only screen and (max-width: 1250px) {
+  .wider-text-button {
+    width: 180% !important;
+  }
+}
 
 
 
