--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -228,6 +228,39 @@ body, html {
       *  MEDIA   QUERIES  *
       * * * * * * * * * * *   */
 
+@media only screen
+  and (min-device-width: 834px)
+  and (max-device-width: 1112px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+  #section2 {
+    min-height: 75vh;
+  }
+  .container-footer1 {
+    margin-top: -20px;
+  }
+  #section3 {
+    min-height: 40vh;
+  }
+  .no-phone {
+    display: none !important;
+  }
+  .compteur-arbres {
+    padding-top: 250px;
+    padding-bottom: 100px;
+  }
+}
+
+
+
+
+.no-phone {
+  display: none;
+}
+
+.no-tablet {
+  display: none;
+}
+
 
 
 @media only screen and (max-width: 1250px) {
@@ -235,6 +268,44 @@ body, html {
     width: 180% !important;
   }
 }
+
+@media only screen and (max-width: 988px) {
+  #section-all {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 988px) {
+  .no-tablet {
+    display: inline-block;
+  }
+}
+
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (-webkit-min-device-pixel-ratio: 1) {
+    .no-phone {
+      display: inline-block;
+    }
+
+    .no-tablet {
+      display: none;
+    }
+  }
+
+@media only screen and (max-width: 788px) {
+  .no-tablet {
+    display: none;
+  }
+
+  .no-phone {
+    display: inline-block;
+  }
+}
+
+
+
 
 
 
