--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <%= stylesheet_pack_tag 'application', media: 'all' %>
   </head>
   <body>
-    <%= render 'shared/navbar' %>
+<!--<%= render 'shared/navbar' %>  Yo couzi j'ai fait ça pour une bonne raison, demande moi pourquoi ;)-->
     <%= render 'shared/flashes' %>
     <div class='frame'>
     <%= yield %>
