--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
 <div id="section-all">
+  <%= render 'shared/navbar' %>
   <div id="section1">
 
     <div class="background-section1">
@@ -244,6 +245,14 @@
     </div>
 
   </div>
+</div>
+
+<div class="no-phone">
+  <img style="width: 100vw" src="https://res.cloudinary.com/tark-industries/image/upload/v1548780556/treep-width-pic.png">
+</div>
+
+<div class="no-tablet">
+  <img style="width: 100vw" src="https://res.cloudinary.com/tark-industries/image/upload/v1548783809/treep-width-pic2.png">
 </div>
 
 
