Implemented the slider options connected to the flights, need to work some more on the UI on this

--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -1,3 +1,4 @@
+
 .flights__list {
   display: flex;
   flex-direction: column;
@@ -6,4 +7,21 @@
 .flight__card {
   display: flex;
   justify-content: space-around;
+}
+
+.flights__container {
+	display: flex;
+	justify-content: space-around;
+}
+
+.flights__options {
+	
+}
+
+.flights__display {
+	width: 200px;
+}
+
+.container {
+	width: 200px;
 }
