Search bar design done

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,8 +1,9 @@
 // Import your components CSS files here.
 @import "alert";
 @import "navbar";
-@import "searchbar";
+@import "searchbar-test";
 @import "searchlist";
 @import "slider";
 @import "transitions";
 @import "details";
+@import "general-search-style";
