Made the changes necessary to have the search bar working on homepage and searchpage

--- a/app/views/pages/search.html.erb
+++ b/app/views/pages/search.html.erb
@@ -4,7 +4,7 @@
         <div class="search__bar__options">
             <div class="aller-retour">
                 <select id="flight_type">
-                	<option value="round">Aller retour</option>
+                	<option selected="selected" value="round">Aller retour</option>
                     <option value="oneway">Aller simple</option>
                 </select>
             </div>
@@ -28,7 +28,7 @@
                     <input type="text" class="search__field" id="returnDate__search" placeholder="Retour le">
                 </div>
                 <button class="checkout__button" id="blue">
-                    <span>Rechercher</span>
+                    Rechercher
                 </button>
                 
             </form>
