--- a/app/assets/stylesheets/components/_searchbar-test.scss
+++ b/app/assets/stylesheets/components/_searchbar-test.scss
@@ -159,3 +159,6 @@ input[type=number]::-webkit-outer-spin-button {
 	align-items: center;
 }
 
+#search__bar__home__background {
+  background: transparent;
+}
