--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -2,12 +2,50 @@
 
 </div>
 
-  <div class="border-form">
+<div class="search__bar__container" id="search__bar__home__background">
+    <div class="search__bar__element__container">
+        
+        <form class="search" id="home__search__form" method="get" action="http://localhost:3000/search">
+            <div class="search__bar__options">
+                <div class="aller-retour">
+                    <select id="flight_type" name="flight_type">
+                        <option value="oneway">Aller simple</option>
+                        <option selected="selected" value="round">Aller retour</option>
+                    </select>
+                </div>
+
+                
+                <p class="passager__description">Passagers</p>
+                <div class="passager">
+                    <div class="value-button" id="decrease"  value="Decrease Value"><p>-</p></div>
+                        <input type="number" id="passengers" name="passengers" min="1" max="9" value="1" />
+                    <div class="value-button" id="increase"  value="Increase Value"><p>+</p></div>
+                </div>
+            </div>
+            <div class="search__bar__frame" id="search__bar__frame__home">
+                <div class="search__bar__box home__search__box">
+                    <input type="text" class="search__field home__search__field" id="departLoc__search" name="depart" placeholder="Partir de" list="airports__depart">
+                    <input type="text" class="search__field home__search__field" id="returnLoc__search" name="return" placeholder="Aller à" list="airports__return">
+                </div>
+                <div class="search__bar__box home__search__box">
+                    <input type="text" class="search__field home__search__field" id="departDate__search" name="from" placeholder="Aller le">
+                    <input type="text" class="search__field home__search__field" id="returnDate__search" name="to" placeholder="Retour le">
+                </div>
+                <button class="checkout__button home__search__button" id="blue">
+                    <span>Rechercher</span>
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
+
+
+  <!-- <div class="border-form">
     <i class="fas fa-plane-departure"></i>
     <i class="fas fa-plane-arrival"></i>
     <div class="square1"></div>
     <div class="square2"></div>
-    <!-- YOU ENTER THE FORM -->
+
     <form class="search" method="get" action="http://localhost:3000/search">
       <ul>
 
@@ -32,5 +70,6 @@
           <span>Rechercher</span>
       </button>
     </form>
-    <!-- YOU LEAVE THE FORM -->
-  </div>
+  </div> -->
+
+
