--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,10 +1,9 @@
 // Import your components CSS files here.
 @import "alert";
 @import "navbar";
-@import "searchbar-test";
+@import "base-searchbar";
 @import "searchlist";
 @import "slider";
 @import "transitions";
 @import "details";
-@import "general-search-style";
 @import "home-searchbar";
