--- a/app/assets/stylesheets/components/_transitions.scss
+++ b/app/assets/stylesheets/components/_transitions.scss
@@ -1,16 +1,30 @@
-.hide__return {
-  transform: scale(0);
-  opacity: 0;
-}
-
-.oneway__search {
-	width: 360px;
-}
 
 
 .search__field {
   transition: all 1s;
 }
+
+.expand-date-field {
+	z-index: 2;
+	width: 200%;
+	margin-right: 0px;
+}
+
+.retract-date-field {
+  width: 0%;
+  padding-left: 0px;
+  margin-left: 0px;
+  background: transparent;
+}
+
+.left-element {
+  margin-right: 3px;
+}
+
+.right-element {
+  margin-left: 3px;
+}
+
 
 #sliderkiller {
 	width: 200px;
