--- a/app/views/shared/_searchbar.html.erb
+++ b/app/views/shared/_searchbar.html.erb
@@ -24,12 +24,12 @@
             </div>
             <div class="search__bar__frame" id="search__bar__frame__home">
                 <div class="search__bar__box home__search__box">
-                    <input type="text" class="search__field home__search__field" id="departLoc__search" name="depart" placeholder="Partir de" list="airports__depart">
-                    <input type="text" class="search__field home__search__field" id="returnLoc__search" name="return" placeholder="Aller à" list="airports__return">
+                    <input type="text" class="search__field home__search__field left-element" id="departLoc__search" name="depart" placeholder="Partir de" list="airports__depart">
+                    <input type="text" class="search__field home__search__field right-element" id="returnLoc__search" name="return" placeholder="Aller à" list="airports__return">
                 </div>
                 <div class="search__bar__box home__search__box">
-                    <input type="text" class="search__field home__search__field" id="departDate__search" name="from" placeholder="Aller le">
-                    <input type="text" class="search__field home__search__field" id="returnDate__search" name="to" placeholder="Retour le">
+                    <input type="text" class="search__field home__search__field left-element" id="departDate__search" name="from" placeholder="Aller le">
+                    <input type="text" class="search__field home__search__field right-element" id="returnDate__search" name="to" placeholder="Retour le">
                 </div>
                 <button class="checkout__button home__search__button" id="blue">
                     <span>Rechercher</span>
